force-app/main/default/objects/Lead/fields/Get_Email__c.field-meta.xml
<CustomField>
    <fullName>Get_Email__c</fullName>
    <formula>IF( $User.Username = &quot;gaurav.bhandari@curious-raccoon-bqqnju.com&quot;, &quot;&quot;, &quot;&quot; + Email )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get Email</label>
    <type>Text</type>
</CustomField>