force-app/main/default/objects/Lead/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>25</length>
    <type>Text</type>
</CustomField>