force-app/main/default/objects/Lead/validationRules/EmailorPhone.validationRule-meta.xml
<ValidationRule>
    <fullName>EmailorPhone</fullName>
    <active>false</active>
    <errorConditionFormula>OR(IF( ISPICKVAL(  Country__c  , &quot;United States&quot;) , IF( LEN( Phone )=10 , false, true)  , false),OR(ISBLANK(Email),ISBLANK(Phone)))</errorConditionFormula>
    <errorMessage>Please enter phone number or email</errorMessage>
</ValidationRule>