force-app/main/default/objects/Lead/validationRules/Mid_Email_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Mid_Email_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF( CONTAINS(MID( Email , 5, 8),&apos;a&apos;),true,false)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Email does not contain &apos;a&apos; character between 5th and 12th character</errorMessage>
</ValidationRule>