force-app/main/default/objects/Lead/validationRules/Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()  &amp;&amp;  ISCLONE())  &amp;&amp;  IF( ISPICKVAL( Status , &quot;Unqualified&quot;) ,  ISBLANK( Reason__c ) , false )</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Reason can not be empty</errorMessage>
</ValidationRule>