force-app/main/default/objects/Lead/validationRules/Source_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_field</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( LeadSource , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Please select lead source value</errorMessage>
</ValidationRule>